--- a/script/Script.ipynb
+++ b/script/Script.ipynb
@@ -439,7 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Commit"
+    "### Commit dengan issue reference"
    ]
   },
   {
@@ -449,6 +449,13 @@
    "outputs": [],
    "source": [
     "commit['Date'] = pd.to_datetime(commit['Date'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### menambahkan no. issue ke list"
    ]
   },
   {
@@ -470,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Commit tanpa ref ke issue"
+    "### Commit tanpa issue reference"
    ]
   },
   {
@@ -599,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Grouping"
+    "### Compare commit dengan issue"
    ]
   },
   {
@@ -613,6 +620,13 @@
     "    for issue in issueList:\n",
     "        if items in issue:\n",
     "            unknownId[unknownCommit.index(items)] = issueId[issueList.index(issue)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### menambahkan no. issue ke list"
    ]
   },
   {
@@ -630,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Merge"
+    "### Merge dataset"
    ]
   },
   {
